--- a/style.css
+++ b/style.css
@@ -308,6 +308,29 @@ textarea {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+.scrollToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--main-color);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: none; /* Ocultar por defecto */
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 24px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.scrollToTop:hover {
+    background-color: #333; /* Cambiar el color al pasar el mouse */
+}
+
 footer {
     background: var(--card-bg);
     text-align: center;
@@ -365,6 +388,40 @@ footer {
     to {
         transform: scale(1);
         opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .map-container iframe {
+        width: 100%;
+        height: 300px; /* Ajusta la altura según sea necesario */
+        border: 0;
+    }
+    .contacto-container {
+        flex-direction: column; /* Cambiar a columna en móviles */
+        align-items: center; /* Centrar el contenido */
+    }
+
+    .contacto h2 {
+        margin-bottom: 1rem; /* Reduce el margen en dispositivos móviles */
+    }
+    
+    form {
+        width: 100%; /* Asegúrate de que el formulario ocupe el 100% del ancho */
+    }
+    
+    input, textarea {
+        width: 100%; /* Asegúrate de que los campos de entrada ocupen el 100% del ancho */
+    }
+
+    .contacto-container {
+        flex-direction: column; /* Mantener el contenido en columna */
+        gap: 1rem; /* Añadir espacio entre los elementos */
+    }
+
+    .map-container {
+        margin-bottom: 1rem; /* Añadir margen en la parte inferior del mapa */
     }
 }
 
